@@ -7,6 +7,7 @@ import net.minecraft.block.BlockState;
 import net.minecraft.entity.Entity;
 import net.minecraft.entity.EntityType;
 import net.minecraft.entity.LivingEntity;
+import net.minecraft.entity.SpawnReason;
 import net.minecraft.entity.ai.goal.*;
 import net.minecraft.entity.damage.DamageSource;
 import net.minecraft.entity.mob.HostileEntity;
@@ -20,6 +21,8 @@ import net.minecraft.util.math.BlockPos;
 import net.minecraft.util.math.MathHelper;
 import net.minecraft.util.math.Vec3d;
 import net.minecraft.world.World;
+import net.minecraft.world.WorldAccess;
+import net.minecraft.world.WorldView;
 
 public class BaseChicken extends HostileEntity {
     public BaseChicken(EntityType<? extends HostileEntity> entityType, World world) {
@@ -56,16 +59,19 @@ public class BaseChicken extends HostileEntity {
     }
 
     @Override
+    public float getPathfindingFavor(BlockPos pos, WorldView world) {
+        return 0.5F - world.getBrightness(pos);
+    }
+
+    @Override
+    public boolean canSpawn(WorldAccess world, SpawnReason spawnReason) {
+        return this.getPathfindingFavor(this.getBlockPos(), world) >= 0.0F;
+    }
+
+    @Override
     public Packet<?> createSpawnPacket() {
         return EntityPacket.createPacket(this);
     }
-
-    /*
-        @Override
-        public boolean canSpawn(WorldAccess world, SpawnReason spawnReason) {
-            return true;
-        }
-     */
 
     public float flapProgress;
     public float maxWingDeviation;
